--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 axum = "0.8.6"
 chrono = { version = "0.4.42", features = ["serde"] }
 dotenv = "0.15.0"
+log = "0.4.28"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 sqlx = { version = "0.8.6", features = [
@@ -17,5 +18,8 @@ sqlx = { version = "0.8.6", features = [
   "chrono",
 ] }
 tokio = { version = "1.47.1", features = ["full"] }
-tower-http = { version = "0.6.6", features = ["cors"] }
+tower = "0.5.2"
+tower-http = { version = "0.6.6", features = ["cors", "trace"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 uuid = { version = "1.18.1", features = ["serde", "v4"] }
