--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@ POSTGRES_USER=admin
 POSTGRES_PASSWORD=password123
 POSTGRES_DB=expense_tracker
 
-DATABASE_URL="postgresql://admin:password123@localhost:6500/expense_tracker?schema=public"
+DATABASE_URL="postgresql://admin:password123@localhost:6500/expense_tracker"
 
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=password123
