--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,9 +5,12 @@ edition = "2024"
 
 [dependencies]
 axum = "0.8.6"
+bcrypt = "0.17.1"
 chrono = { version = "0.4.42", features = ["serde"] }
 dotenv = "0.15.0"
+jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
 log = "0.4.28"
+regex = "1.12.2"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 sqlx = { version = "0.8.6", features = [
