--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -9,13 +9,13 @@ services:
       - postgresDB:/var/lib/postgresql/data
     env_file:
       - ./.env
-  pgAdmin:
-    image: dpage/pgadmin4
-    container_name: pgAdmin
-    env_file:
-      - ./.env
-    ports:
-      - "5050:80"
+  # pgAdmin:
+  #   image: dpage/pgadmin4
+  #   container_name: pgAdmin
+  #   env_file:
+  #     - ./.env
+  #   ports:
+  #     - "5050:80"
 
 volumes:
   postgresDB:
