--- a/backend/.env
+++ b/backend/.env
@@ -8,3 +8,5 @@ DATABASE_URL="postgresql://admin:password123@localhost:6500/expense_tracker"
 
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=password123
+
+JWT_SECRET=mysupersecretpassword
