--- a/exptrack/app.json
+++ b/exptrack/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ExpTrack",
-    "slug": "ExpTrack",
+    "name": "exptrack",
+    "slug": "exptrack",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
