--- a/exptrack/package.json
+++ b/exptrack/package.json
@@ -12,26 +12,26 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
-    "@radix-ui/react-dialog": "^1.1.15",
     "@react-navigation/bottom-tabs": "^7.4.0",
-    "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "expo": "~54.0.12",
+    "expo": "~54.0.17",
     "expo-constants": "~18.0.9",
-    "expo-font": "~14.0.8",
+    "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.8",
+    "expo-image": "~3.0.10",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.10",
+    "expo-router": "~6.0.13",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.8",
+    "nativewind": "^5.0.0-preview.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-css": "^3.0.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
@@ -40,10 +40,19 @@
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.15",
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "postcss": "^8.5.6",
+    "prettier-plugin-tailwindcss": "^0.7.1",
+    "tailwindcss": "^4.1.15",
     "typescript": "~5.9.2"
+  },
+  "overrides": {
+    "metro-runtime": "0.83.1",
+    "@expo/metro-runtime": "6.1.2",
+    "lightningcss": "1.30.1"
   },
   "private": true
 }
