--- a/exptrack/package.json
+++ b/exptrack/package.json
@@ -3,57 +3,46 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "lint": "expo lint"
+    "dev": "expo start -c",
+    "android": "expo start -c --android",
+    "ios": "expo start -c --ios",
+    "web": "expo start -c --web",
+    "clean": "rm -rf .expo node_modules"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
-    "@react-navigation/bottom-tabs": "^7.4.0",
-    "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.8",
-    "expo": "~54.0.17",
-    "expo-constants": "~18.0.9",
-    "expo-font": "~14.0.9",
-    "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.10",
+    "@react-navigation/native": "^7.0.0",
+    "@rn-primitives/portal": "~1.3.0",
+    "@rn-primitives/slot": "^1.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "expo": "^54.0.0",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.13",
+    "expo-router": "~6.0.10",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
-    "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.8",
-    "nativewind": "^5.0.0-preview.2",
+    "lucide-react-native": "^0.545.0",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
-    "react-native-css": "^3.0.1",
-    "react-native-gesture-handler": "~2.28.0",
+    "react-native": "0.81.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^3.4.14",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.15",
-    "@types/react": "~19.1.0",
-    "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0",
-    "postcss": "^8.5.6",
-    "prettier-plugin-tailwindcss": "^0.7.1",
-    "tailwindcss": "^4.1.15",
+    "@babel/core": "^7.26.0",
+    "@types/react": "~19.1.10",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "~5.9.2"
-  },
-  "overrides": {
-    "metro-runtime": "0.83.1",
-    "@expo/metro-runtime": "6.1.2",
-    "lightningcss": "1.30.1"
   },
   "private": true
 }
