feat: refactor expense update screen and add ExpenseCard component
- Updated the UpdateExpenseScreen to import Text from a custom UI component.
- Wrapped the RootLayout in GestureHandlerRootView for improved gesture handling.
- Added ExpenseCard component for displaying expense details with formatted date and amount.
- Introduced AlertDialog component for better user interaction and alerts.
- Updated package.json and bun.lock to include new dependencies for bottom sheet and alert dialog.

--- a/exptrack/package.json
+++ b/exptrack/package.json
@@ -10,8 +10,10 @@
     "clean": "rm -rf .expo node_modules"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5",
     "@hookform/resolvers": "^5.2.2",
     "@react-navigation/native": "^7.0.0",
+    "@rn-primitives/alert-dialog": "^1.2.0",
     "@rn-primitives/avatar": "^1.2.0",
     "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/popover": "^1.2.0",
