--- a/exptrack/package.json
+++ b/exptrack/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^5",
     "@hookform/resolvers": "^5.2.2",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/alert-dialog": "^1.2.0",
     "@rn-primitives/avatar": "^1.2.0",
     "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/popover": "^1.2.0",
     "@rn-primitives/portal": "~1.3.0",
+    "@rn-primitives/select": "^1.2.0",
     "@rn-primitives/separator": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "@tanstack/react-query": "^5.90.5",
