--- a/exptrack/package.json
+++ b/exptrack/package.json
@@ -23,6 +23,7 @@
     "@rn-primitives/select": "^1.2.0",
     "@rn-primitives/separator": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
+    "@shopify/flash-list": "2.0.2",
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
