Add background task for notification handling and related dependencies
- Updated package.json to include expo-background-task, expo-notifications, and expo-task-manager.
- Implemented background task in backgroundTask.ts to fetch notifications and schedule local notifications.
- Added notification handling logic to redirect users based on notification data.
- Set up notification permissions and channel for Android.

--- a/exptrack/app.json
+++ b/exptrack/app.json
@@ -33,7 +33,10 @@
     },
     "plugins": [
       "expo-router",
-      "expo-secure-store"
+      "expo-secure-store",
+      "expo-notifications",
+      "expo-background-task",
+      "expo-task-manager"
     ],
     "experiments": {
       "typedRoutes": true
