--- a/exptrack/package.json
+++ b/exptrack/package.json
@@ -29,12 +29,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "^54.0.0",
+    "expo-background-task": "~1.0.8",
     "expo-linking": "~8.0.8",
+    "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.10",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.7",
+    "expo-task-manager": "~14.0.8",
     "lucide-react-native": "^0.545.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
