feat: add eas.json for EAS build configuration
chore: update package dependencies and versions
- upgraded expo from ^54.0.0 to 54.0.21
- added expo-dev-client and expo-linear-gradient
- updated expo-router from ~6.0.10 to ~6.0.14
- added react-native-gifted-charts

fix: reduce background task interval from 30 minutes to 15 minutes

--- a/exptrack/app.json
+++ b/exptrack/app.json
@@ -24,7 +24,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.idityage.exptrack"
     },
     "web": {
       "bundler": "metro",
@@ -40,6 +41,13 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "b78a054f-155a-4bb2-8063-4472c6450146"
+      }
+    },
+    "owner": "idityage"
   }
 }
