--- a/exptrack/package.json
+++ b/exptrack/package.json
@@ -28,11 +28,13 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "expo": "^54.0.0",
+    "expo": "54.0.21",
     "expo-background-task": "~1.0.8",
+    "expo-dev-client": "~6.0.16",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-notifications": "~0.32.12",
-    "expo-router": "~6.0.10",
+    "expo-router": "~6.0.14",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -44,6 +46,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "react-native": "0.81.5",
+    "react-native-gifted-charts": "^1.4.64",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
